...
            name="clickListener"
            type="com.example.mycocktails.screens.cocktail.CocktailListener" />
    </data>


    <androidx.cardview.widget.CardView
        android:id="@+id/CocktailLayout_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/CocktailLayout_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/CocktailList_LinearLayout"
            >

            <Button
                android:id="@+id/CocktailLayout_Button_CocktailName"
                style="@style/Screen_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> clickListener.onClick(cocktail)}"
                app:cocktailName="@{cocktail}" />
...
