...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.2"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/SearchFragment_GuideLine">

            <ImageButton
                android:id="@+id/SearchFragment_Button_StartSearch"
                style="@style/SearchFragment_SearchImage_Button"
                android:contentDescription="@string/SearchFragment_TextView_SearchTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SearchFragment_TextInput_SearchBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CreateCocktailForm_TextInputField_Searchbar"
 />

        </LinearLayout>
...
