<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/SearchFragment"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"  />
    <item
        android:id="@+id/CreateCocktailFragment"
        android:icon="@drawable/add"
        android:title="Create" />
    <item
        android:id="@+id/ShoppingFragment"
        android:icon="@drawable/shopping_basket"
        android:title="Shoppinglist" />
</menu>